Add github-runner DHCP static-mapping

--- a/ansible/vyos/templates/config.j2
+++ b/ansible/vyos/templates/config.j2
@@ -263,6 +263,10 @@ service {
                     start "192.168.72.30"
                     stop "192.168.72.60"
                 }
+                static-mapping github-runner {
+                    ip-address "192.168.72.7"
+                    mac-address "00:50:56:a0:1f:f1"
+                }
             }
         }
     }
